# ark

./: .env.vtc.example  .gitignore  CHECKLIST.md  CLAUDE.md  Captain_Analysis.md  DEBUGGING-HUDTOPBAR.md  README.md  amplify.yml  deploy-amplify-app.sh  synesthesia-v2.html
.cursor/rules/: repo-guidelines.md
Examples/: synesthesia-bridge(1).html
conductor/: tech-stack.md
core/: README.md  pyproject.toml  pyrightconfig.json
core/agent/: dev.py  dev_multi.py  pyproject.toml
core/agent/src/agent/: __init__.py  agent.py  captain.py  models.py  orchestrator.py  prompts.py  tools.py
core/agent/src/agent/calc_tools/: __init__.py  anomaly.py  budget.py  debt.py  rewards.py
core/agent/src/agent/specialists/: __init__.py  base.py  budget_overruns.py  debt_spirals.py  financial_meaning.py  fraud_detection.py  missed_rewards.py  upcoming_bills.py  wasteful_subscriptions.py
core/agent/src/agent/vtc/: __init__.py  client.py  constants.py  enforcement.py  mapping.py
core/agent/tests/: test_calc_tools.py
core/database/: pyproject.toml
core/database/src/database/: __init__.py  base_client.py  data_table_client.py  users_table_client.py  utils.py
core/database/src/database/models/: user.py
core/lambda/captain-lambda/: handler.py  local_server.py  pyproject.toml
core/lambda/data-lambda/: handler.py  local_server.py  pyproject.toml
core/lambda/data-lambda/services/: __init__.py  asteroid_detector.py  budget_engine.py  report_service.py
core/lambda/user-lambda/: handler.py  pyproject.toml
core/lambda/visa-lambda/: handler.py  pyproject.toml
core/lambda/visa-lambda/services/: visa_service.py
core/scripts/: seed_demo.py  seed_dynamodb.py  seed_dynamodb_demo.py  seed_nessie.py  seed_nessie_demo.py  visa_auth.py  visa_vtc_debug.py
core/scripts/visa/: __init__.py  _client.py  _constants.py  nuke.py
core/scripts/visa/pipelines/: 01_bootstrap.py  02_enroll.py  03_rules_crud.py  04_global_controls.py  05_merchant_controls.py  06_transaction_controls.py  07_fraud_freeze.py  08_decision_test.py  09_full_flow.py
core/scripts/visa/test/: visa_auth.py  visa_vtc_debug.py
core/shared/: pyproject.toml
core/shared/src/shared/: __init__.py  categories.py  models.py  nessie_service.py  utils.py
core/shared/src/shared/mocks/: __init__.py  asteroids.json  budget.json  snapshot.json
core/shared/src/shared/mocks/demo/: james_chen.json  maya_torres.json  merchants.json  sofia_ramirez.json
docs/: CAPTAIN_NOVA_V2_SUMMARY.md  demo-seed-data.md
docs/architecture/: three-js-disposal.md
docs/plans/: 2026-02-07-captain-nova-v3-redesign.md  2026-02-07-critical-issues-plan.md  2026-02-07-important-issues-plan.md  2026-02-07-space-atmosphere.md  IMPLEMENTATION-GUIDE.md  MASTER-synesthesiapay-bridge.md  module-breakdown.md
docs/visa/: VISA_INTEGRATION.md
infrastructure/: README.md  package.json
infrastructure/lib/: amplify-stack.ts  api-stack.ts  auth-stack.ts  constants.ts  storage-stack.ts
scripts/: generate-types.sh
web/: 2026-02-06-command-messagesuperpowersbrainstormcommand-m.txt  Initial implementation.txt  README.md  package-lock.json  package.json
web/.claude/: settings.local.json
web/Design_doc/: 01-threat-visual-upgrade-technical-foundation.md  02-threat-visual-upgrade-detailed-designs.md
web/__tests__/: boot-sequence.test.ts  captain-api.test.ts  (+4 more)
(+308 files in other folders)
