[project]
name = "database"
version = "0.1.0"
description = "Database module"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools>=3.24.0",
    "boto3>=1.42.43",
    "botocore>=1.42.43",
    "pydantic[email]>=2.12.5",
]

[dependency-groups]
dev = [
    "boto3-stubs>=1.42.43",
    "botocore-stubs>=1.42.41",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/database"]
