[project]
name = "shared"
version = "0.1.0"
description = "Shared models and utilities for SynesthesiaPay"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "aws-lambda-powertools>=3.24.0",
]

[dependency-groups]
dev = [
    "pydantic-to-typescript2>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
