[project]
name = "data-lambda"
version = "0.1.0"
description = "Financial data service: Nessie integration, budget engine, asteroid detection"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools>=3.24.0",
    "aws-xray-sdk>=2.15.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[tool.uv.sources]
shared = { workspace = true }
database = { workspace = true }
