[project]
name = "visa-lambda"
version = "0.1.0"
description = "VISA Transaction Controls service"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools>=3.24.0",
    "aws-xray-sdk>=2.15.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
shared = { workspace = true }
database = { workspace = true }
